test: 새로 정의한 컨벤션 수정