@@ -1,18 +1,19 @@
 package com.daedan.festabook.schedule.service;
 
 import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.SoftAssertions.assertSoftly;
 import static org.mockito.BDDMockito.given;
 
 import com.daedan.festabook.schedule.domain.Event;
 import com.daedan.festabook.schedule.domain.EventDay;
+import com.daedan.festabook.schedule.domain.EventDayFixture;
+import com.daedan.festabook.schedule.domain.EventFixture;
 import com.daedan.festabook.schedule.domain.EventStatus;
 import com.daedan.festabook.schedule.dto.EventDayResponse;
 import com.daedan.festabook.schedule.dto.EventDayResponses;
 import com.daedan.festabook.schedule.dto.EventResponses;
 import com.daedan.festabook.schedule.repository.EventDayJpaRepository;
 import java.time.LocalDate;
-import java.time.LocalTime;
-import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
@@ -41,30 +42,32 @@ class ScheduleServiceTest {
         @Test
         void 성공() {
             // given
-            EventDay eventDay1 = createTestEventDay(26);
-            EventDay eventDay2 = createTestEventDay(27);
+            EventDay eventDay1 = EventDayFixture.create(LocalDate.of(2025, 10, 26));
+            EventDay eventDay2 = EventDayFixture.create(LocalDate.of(2025, 10, 27));
 
             List<EventDay> eventDays = Arrays.asList(eventDay1, eventDay2);
 
             given(eventDayJpaRepository.findAll())
                     .willReturn(eventDays);
 
+            LocalDate expected = LocalDate.of(2025, 10, 26);
+
             // when
-            EventDayResponses responses = scheduleService.getEventDays();
+            EventDayResponses result = scheduleService.getEventDays();
 
             // then
-            assertThat(responses.eventDays())
-                    .hasSize(2);
-            assertThat(responses.eventDays().get(0).date())
-                    .isEqualTo(LocalDate.of(2025, 10, 26));
+            assertSoftly(s -> {
+                s.assertThat(result.eventDays()).hasSize(2);
+                s.assertThat(result.eventDays().getFirst().date()).isEqualTo(expected);
+            });
         }
 
         @Test
         void 성공_날짜_오름차순_정렬() {
             // given
-            EventDay eventDay1 = createTestEventDay(27);
-            EventDay eventDay2 = createTestEventDay(26);
-            EventDay eventDay3 = createTestEventDay(25);
+            EventDay eventDay1 = EventDayFixture.create(LocalDate.of(2025, 10, 27));
+            EventDay eventDay2 = EventDayFixture.create(LocalDate.of(2025, 10, 26));
+            EventDay eventDay3 = EventDayFixture.create(LocalDate.of(2025, 10, 25));
 
             List<EventDay> eventDays = Arrays.asList(eventDay1, eventDay2, eventDay3);
 
@@ -92,10 +95,10 @@ class ScheduleServiceTest {
         void 성공() {
             // given
             Long eventDayId = 1L;
-            EventDay eventDay = createTestEventDay(26);
+            EventDay eventDay = EventDayFixture.create(LocalDate.of(2025, 10, 26));
 
-            Event event1 = createTestEvent("무대 공연", EventStatus.COMPLETED);
-            Event event2 = createTestEvent("부스 운영", EventStatus.UPCOMING);
+            Event event1 = EventFixture.create("무대 공연", EventStatus.COMPLETED);
+            Event event2 = EventFixture.create("부스 운영", EventStatus.UPCOMING);
 
             eventDay.getEvents().addAll(Arrays.asList(event1, event2));
 
@@ -106,29 +109,11 @@ class ScheduleServiceTest {
             EventResponses result = scheduleService.getEventsByEventDayId(eventDayId);
 
             // then
-            assertThat(result.events())
-                    .hasSize(2);
-            assertThat(result.events().get(0).title())
-                    .isEqualTo("무대 공연");
-            assertThat(result.events().get(1).status())
-                    .isEqualTo(EventStatus.UPCOMING);
+            assertSoftly(s -> {
+                s.assertThat(result.events()).hasSize(2);
+                s.assertThat(result.events().get(0).title()).isEqualTo("무대 공연");
+                s.assertThat(result.events().get(1).status()).isEqualTo(EventStatus.UPCOMING);
+            });
         }
-    }
-
-    private Event createTestEvent(String title, EventStatus status) {
-        return new Event(
-                status,
-                LocalTime.of(12, 0, 0),
-                LocalTime.of(13, 0, 0),
-                title,
-                "장소"
-        );
-    }
-
-    private EventDay createTestEventDay(int dayOfMonth) {
-        return new EventDay(
-                LocalDate.of(2025, 10, dayOfMonth),
-                new ArrayList<>()
-        );
     }
 }
